--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,8 +5,6 @@
 @layer base {
   body {
     height: 100vh;
-    background-color: rgb(31 41 55);
-    color: #fff;
-    padding: 0 32px;
+    background-color: #fff;
   }
 }
